--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typescript": ">=4.5.0"
   },
   "dependencies": {
+    "@iarna/toml": "^2.2.5",
     "@noir-lang/aztec_backend": "^0.12.0",
     "@noir-lang/barretenberg": "^2.19.0",
     "@noir-lang/noir_wasm": "^0.10.0"
