--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^1.0.1",
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.1",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
@@ -34,6 +34,8 @@
     "@iarna/toml": "^2.2.5",
     "@noir-lang/aztec_backend": "^0.12.0",
     "@noir-lang/barretenberg": "^2.19.0",
-    "@noir-lang/noir_wasm": "^0.10.0"
+    "@noir-lang/noir_wasm": "^0.10.0",
+    "@openzeppelin/contracts": "^4.8.0",
+    "hardhat-deploy-ethers": "^0.3.0-beta.13"
   }
 }
