--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,14 @@
 // tsconfig.json 
 {
-    "compilerOptions": {
-        "target": "ES2020",
-    },
-    "include": [
-      "src", "modules.d.ts"
-    ],
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true
+  },
+  "include": [
+    "src", "modules.d.ts"
+  ],
 }
