--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@noir-lang/barretenberg": "^2.19.0",
     "@noir-lang/noir_wasm": "^0.10.0",
     "@openzeppelin/contracts": "^4.8.0",
+    "dotenv": "^16.0.3",
     "hardhat-deploy-ethers": "^0.3.0-beta.13"
   }
 }
