update contract logic to properly handle leave and forfeit

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Noir implementation of BattleZips.",
   "main": "index.ts",
   "scripts": {
+    "deploy": "npx hardhat run scripts/deploy.ts --network goerli",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
