remove prover and verifier

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 out/
 cache/
-circuits/*/build/
+circuits/**/build/
 artifacts/
-circuits/*/proofs/
-circuits/*/Prover.toml/
-circuits/*/Verifier.toml/
+circuits/**/proofs/
+circuits/**/Prover.toml
+circuits/**/Verifier.toml
 deploy
 # Logs
 logs
