--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Noir implementation of BattleZips.",
   "main": "index.ts",
   "scripts": {
-    "deploy": "hardhat run scripts/deploy.ts --network goerli",
+    "deploy-local": "hardhat run scripts/deploy.ts",
+    "deploy-goerli": "hardhat run scripts/deploy.ts --network goerli",
+    "deploy-gnosis": "hardhat run scripts/deploy.ts --network gnosis",
+    "deploy-polygon": "hardhat run scripts/deploy.ts --network polygon",
+    "deploy-mumbai": "hardhat run scripts/deploy.ts --network polygonMumbai",
     "generate-contracts": "hardhat run scripts/generateContracts.ts",
     "generate-frontend-files": "ts-node scripts/generateFrontendData.ts",
     "generate-witnesses": "ts-node scripts/generateBoardWitness.ts && ts-node scripts/generateShotWitness.ts",
@@ -40,9 +44,10 @@
   },
   "dependencies": {
     "@iarna/toml": "^2.2.5",
-    "@noir-lang/aztec_backend": "^0.11.0",
-    "@noir-lang/barretenberg": "^2.19.0",
-    "@noir-lang/noir_wasm": "^0.10.0",
+    "@noir-lang/aztec_backend": "github:kobyhallx/aztec-backend#1bcdd4bf67dad1ab977867f1d655bcab7085a518",
+    "@noir-lang/barretenberg": "github:noir-lang/barretenberg#39a1547875f941ef6640217a42d8f34972425c97",
+    "@noir-lang/noir_wasm": "github:noir-lang/noir_wasm#344738adc66965fa20b0bb0c13a83ac5ceedf486",
+    "@noir-lang/noir-source-resolver": "^1.0.0",
     "@openzeppelin/contracts": "^4.8.0",
     "dotenv": "^16.0.3",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
