less confusing example env

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-ETHERSCAN_KEY= bringYourOwnEtherscanKey
-INFURA=bringYourOwnInfuraKey
-MNEMONIC=my mnemonic that should have twelve words
+# Block explorer API key (etherscan/ polygonscan/ arbscan/ etc)
+ETHERSCAN_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# Infura API key (ex: for https://goerli.infura.io/v3/xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx take xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx)
+INFURA=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# 12 word BIP39 mnemonic for ethereum accounts
+MNEMONIC=word1 word2 word3 word4 word5 word6 word7 word8 word9 word10 word11 word12
